adding visu, changes on passing ini and formation flight parameters
-added the visualization routine (visualizationLonLatAlt) containing a Kepler propagator. this routine also outputs orbital data in a file and provides a simple visualization on a globe. The Kepler propagator is to be replaced with a SGP4
-changed the code to have formation flight parameters and initial conditions in the calling routine runCosmosBeta. the first is passed through files as preparation to export to flight sw injson format

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@
 *.asv
 workspace.mat
 tempUML*
+sat1LLR.csv
+sat2LLR.csv
+FFP.json
+FFPsat1.json
+FFPsat2.json
+FFPsat3.json
+sat3LLR.csv
+sat4LLR.csv
