small change: move gps.orbitcounterincrement down

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ sat4LLR.csv
 parametersSat1.json
 parametersSat2.json
 parametersSat3.json
+sat4_LLR_PYR.csv
+sat2_LLR_PYR.csv
+sat1_LLR_PYR.csv
+sat3_LLR_PYR.csv
