the data is now transferred from Satellite to Simulation through telemetry files to better separate simulation and onboard s/w (however the actual data still belongs to simulation, needs to be changed!)

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,29 @@ sat4_LLR_PYR.csv
 sat2_LLR_PYR.csv
 sat1_LLR_PYR.csv
 sat3_LLR_PYR.csv
+ffps/fc_FFP_sat2.json
+sat1_LLR_PYRx.csv
+2d.fig
+3d.fig
+@CosmosSimulation/CosmosSimulation.m
+@CosmosSimulation/plotting.m
+@CosmosSimulation/start.m
+@CosmosSimulation/visualizationLONLATALT.m
+dataSet2_vizScale100.zip
+docs/custom-classes.txt
+ffps/fc_FFP_sat2.json
+runCosmosBeta.m
+sat2_LLR_PYRx.csv
+sat3_LLR_PYRx.csv
+sat4_LLR_PYRx.csv
+TMSatPosition1.csv
+TMSatPosition2.csv
+TMSatPosition3.csv
+TMSatStates1.csv
+TMSatStates2.csv
+TMSatStates3.csv
+TMTimeVector1.csv
+TMTimeVector2.csv
+TMTimeVector3.csv
+ffps/fc_FFP_sat2.json
+ffps/fc_FFP_sat2.json
