forceVector and controlVector are not local to Satellite.fly anymore but are properties of Satellite. Their content is collected in the Satellite.controlVectorTM/Satellite.forceVectorTM telemetry arrays for each timestep. These TM files are save to disk. They are then loaded by the Simulation.plotting for plotting.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,9 @@ TMTimeVector2.csv
 TMTimeVector3.csv
 ffps/fc_FFP_sat2.json
 ffps/fc_FFP_sat2.json
+TMControlVector1.csv
+TMControlVector2.csv
+TMControlVector3.csv
+TMForceVector1.csv
+TMForceVector2.csv
+TMForceVector3.csv
