in visualization: corrected lat/lon computation for formation members, improved 2d map visualization

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ TM*
 *.csv
 *.fig
 *.png
+20201117ClusterReferenceIncl00/CosmosParameters.json
+20201117ClusterReferenceIncl52/CosmosParameters.json
+20201117ClusterReferenceIncl90/CosmosParameters.json
