--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ TM*
 20201117ClusterReferenceIncl00/CosmosParameters.json
 20201117ClusterReferenceIncl52/CosmosParameters.json
 20201117ClusterReferenceIncl90/CosmosParameters.json
+5gcase/CosmosParameters.json
