--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ TM*
 20201117ClusterReferenceIncl52/CosmosParameters.json
 20201117ClusterReferenceIncl90/CosmosParameters.json
 5gcase/CosmosParameters.json
+latSP.mat
+lonSP.mat
