in simulink: added a factor in camera movement law: allows no movement

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ visualization/work/cache/**
 workspace.mat
 tempUML*
 *.zip
+20201108_COSMOS_CYGNSS1Day.png
+20201108_COSMOS_CYGNSS1Day.png
+20201108_COSMOS_CYGNSS1Day.png
+coordtracked/20210405TestTwoSats/sat0_LLR_RPY_Scaled.csv
+coordtracked/20210405TestTwoSats/sat1_LLR_RPY_Scaled - Copy.csv
