intermediary commit allowing to visualize 5G cases

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@ tempUML*
 20201108_COSMOS_CYGNSS1Day.png
 coordtracked/20210405TestTwoSats/sat0_LLR_RPY_Scaled.csv
 coordtracked/20210405TestTwoSats/sat1_LLR_RPY_Scaled - Copy.csv
+2times20minperdayfor7days.csv
+everyday6times30minperdayfor7daysTBC.csv
+2times240minperdayfor7days.csv
+2times240minperdayfor7days.csv
+a.csv
+visualization/ProjectTasks/CubeSatStoredValues.mat
+2times40minperdayfor7days.csv
+visualization/ProjectTasks/CubeSatStoredValues.mat
